Fixed alignment of modal close button

--- a/src/components/modal-timekeep/style.css
+++ b/src/components/modal-timekeep/style.css
@@ -9,5 +9,5 @@
 
 .modal-timekeep > .form-input.button {
   width: 60px;
-  justify-self: flex-end;
+  align-self: flex-end;
 }
